--- a/media/css/scss/section_questionnaire.scss
+++ b/media/css/scss/section_questionnaire.scss
@@ -52,6 +52,7 @@
                 padding:5px 0 5px 30px !important;
                 #questionnaire-code-error {
                     background: url(/media/images/arrow_error.png) no-repeat left 3px !important;
+                    float:none !important;
                 }
                 label{
                     display:inline;
@@ -212,4 +213,7 @@
     li{
         list-style-type: decimal;
     }
+}
+#questionnaire-code{
+    float: none;
 }
